--- a/FreqsandGrads/index.html
+++ b/FreqsandGrads/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
 
     <title>Vincent Escueta  |  Frequencies and Gradients</title>
@@ -40,13 +40,13 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a data-toggle="collapse" data-target=".in" class="page-scroll" href="../index.html">Portfolio</a>
+                        <a class="page-scroll" href="../index.html">Portfolio</a>
                     </li>
                     <li>
-                        <a data-toggle="collapse" data-target=".in" class="page-scroll" href="../about.html">About</a>
+                        <a class="page-scroll" href="../about.html">About</a>
                     </li>
                     <li>
-                        <a data-toggle="collapse" data-target=".in" class="page-scroll" href="../index.html#resume">Resume</a>
+                        <a class="page-scroll" href="../index.html#resume">Resume</a>
                     </li>
                 </ul>
             </div>
