--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
     </nav>
     <header class="bg"> </header>
 
-     <section class="bg" id="about">
+     <section class="no-padding bg" id="about">
         <div class="container">
 <!--             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
