--- a/GeoMenagerie/index.html
+++ b/GeoMenagerie/index.html
@@ -69,11 +69,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part1_with_edges.png" width="800px" />
+                    <img src="images/part1_with_edges.png"  />
                     <p align="middle">Figure 1: The result showing the edges and faces</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part1_without_edges.png" width="800px" />
+                    <img src="images/part1_without_edges.png"  />
                     <p align="middle">Figure 2: Result without showing where the edges and faces are </p>
                 </div>
             </div>
@@ -90,11 +90,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part2_front.png" width="800px" />
+                    <img src="images/part2_front.png"  />
                     <p align="middle">Figure 3: Front of the teapot with averaged normals</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part2_back.png" width="800px" />
+                    <img src="images/part2_back.png"  />
                     <p align="middle">Figure 4: Back of the teapot with averaged normals</p>
                 </div>
             </div>
@@ -107,19 +107,19 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-sm-6 text-center photos">
-                    <img src="images/part3_original.png" width="800px" />
+                    <img src="images/part3_original.png"  />
                     <p align="middle">Figure 5: Original teapot mesh</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-sm-6 text-center photos">
-                    <img src="images/part3_face_messup.png" width="800px" />
+                    <img src="images/part3_face_messup.png"  />
                     <p align="middle">Figure 6: Flip edge mess up due to not accounting for face halfedges</p>
                 </div>
             </div>
              <div class="row">
                 <div class="col-lg-4 col-sm-6 text-center photos">
-                    <img src="images/part3_flipped_edges.png" width="800px" />
+                    <img src="images/part3_flipped_edges.png"  />
                     <p align="middle">Figure 7: Teapot with flipped edges</p>
                 </div>
             </div>
@@ -132,11 +132,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part4.png" width="800px" />
+                    <img src="images/part4.png"  />
                     <p align="middle">Figure 8: After flipping and splitting edges</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part4_drawing.jpg" width="800px" />
+                    <img src="images/part4_drawing.jpg"  />
                     <p align="middle">Figure 9: Drawing to help me figure out my problems</p>
                 </div>
             </div>
@@ -150,105 +150,105 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part5_icosahedron_wrong.png" width="400px" />
+                    <img src="images/part5_icosahedron_wrong.png"  />
                     <p align="middle">Figure 10: Icosahedron with wrong vertex placement after 1 subdivision</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part5_icosahedron_right.png" width="400px" />
+                    <img src="images/part5_icosahedron_right.png"  />
                     <p align="middle">Figure 11: Icosahedron with right vertex placement after 1 subdivision</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part5_torus_original.png" width="400px" />
+                    <img src="images/part5_torus_original.png"  />
                     <p align="middle">Figure 12: Original torus</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part5_torus_wrong.png" width="400px" />
+                    <img src="images/part5_torus_wrong.png"  />
                     <p align="middle">Figure 13: Wrinkly, wrong torus after subdividing</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part5_torus_right_rough.png" width="400px" />
+                    <img src="images/part5_torus_right_rough.png"  />
                     <p align="middle">Figure 14: Right torus before average weighted normals</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part5_torus_right_smooth.png" width="400px" />
+                    <img src="images/part5_torus_right_smooth.png"  />
                     <p align="middle">Figure 15: Right torus after average weighted normals</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part5_square_original.png" width="400px" />
+                    <img src="images/part5_square_original.png"  />
                     <p align="middle">Figure 16: Original square mesh</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part5_square_original1.png" width="400px" />
+                    <img src="images/part5_square_original1.png"  />
                     <p align="middle">Figure 17: Original square mesh after subdividing once</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part5_square_original2.png" width="400px" />
+                    <img src="images/part5_square_original2.png"  />
                     <p align="middle">Figure 18: Original square mesh after subidividing twice (it is lopsided)</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part5_square_middle_edges_split.png" width="400px" />
+                    <img src="images/part5_square_middle_edges_split.png"  />
                     <p align="middle">Figure 19: Square mesh after splitting middle edge of each face</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part5_square_middle_edges_split1.png" width="400px" />
+                    <img src="images/part5_square_middle_edges_split1.png"  />
                     <p align="middle">Figure 20: Middle edge split after 1 subdivision</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part5_square_middle_edges_split2.png" width="400px" />
+                    <img src="images/part5_square_middle_edges_split2.png"  />
                     <p align="middle">Figure 21: Middle edge split after 2 subdivision</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part5_square_outside_edges_also_split.png" width="400px" />
+                    <img src="images/part5_square_outside_edges_also_split.png"  />
                     <p align="middle">Figure 22: splitting cube edges of Figure 19</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part5_square_outside_edges_also_split1.png" width="400px" />
+                    <img src="images/part5_square_outside_edges_also_split1.png"  />
                     <p align="middle">Figure 23: 1 subdivision of Figure 22</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part5_square_outside_edges_also_split2.png" width="400px" />
+                    <img src="images/part5_square_outside_edges_also_split2.png"  />
                     <p align="middle">Figure 24: 2 subdivision of Figure 22</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part5_square_outside_edges_also_split3.png" width="400px" />
+                    <img src="images/part5_square_outside_edges_also_split3.png"  />
                     <p align="middle">Figure 25: Center of Figure 24 to show symmetry</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part5_square_repeat_both.png" width="400px" />
+                    <img src="images/part5_square_repeat_both.png"  />
                     <p align="middle">Figure 26: Splitting all middle edges and cube edges again</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part5_square_repeat_both1.png" width="400px" />
+                    <img src="images/part5_square_repeat_both1.png"  />
                     <p align="middle">Figure 27: 1 subdivision of Figure 26 </p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part5_square_repeat_both2.png" width="400px" />
+                    <img src="images/part5_square_repeat_both2.png"  />
                     <p align="middle">Figure 28: 2 subdivision of Figure 26</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part5_square_repeat_both3.png" width="400px" />
+                    <img src="images/part5_square_repeat_both3.png"  />
                     <p align="middle">Figure 29: Center of Figure 26 to show symmetry</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
-                    <img src="images/part5_square_repeat_both_no_edges.png" width="400px" />
+                    <img src="images/part5_square_repeat_both_no_edges.png"  />
                     <p align="middle">Figure 30: Figure 29 without showing edges and vertices</p>
                 </div>
             </div>
@@ -271,11 +271,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part6_phong.png" width="800px" />
+                    <img src="images/part6_phong.png"  />
                     <p align="middle">Figure 31: Phong shading</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part6_environment.png" width="800px" />
+                    <img src="images/part6_environment.png"  />
                     <p align="middle">Figure 32: Environment map reflection shading</p>
                 </div>
             </div>
@@ -289,81 +289,81 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part7_inspiration.jpg" width="500px" />
+                    <img src="images/part7_inspiration.jpg"  />
                     <p align="middle">Figure 33: The inspiration for the mesh, my dog. Her name is Rey.</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part7_final.png" width="500px" />
+                    <img src="images/part7_final.png"  />
                     <p align="middle">Figure 34: The final submission without any subdivision, I think it looks best this way. It's white cause my dog is white</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part7_no_upsample_smooth.png" width="500px" />
+                    <img src="images/part7_no_upsample_smooth.png"  />
                     <p align="middle">Figure 35: smoothened before subdivision</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part7_original.png" width="800px" />
+                    <img src="images/part7_original.png"  />
                     <p align="middle">Figure 36: The dog mesh without any edits</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part7_front.png" width="800px" />
+                    <img src="images/part7_front.png"  />
                     <p align="middle">Figure 37: front of dog</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part7_side.png" width="800px" />
+                    <img src="images/part7_side.png"  />
                     <p align="middle">Figure 38: side of dog</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part7_butt.png" width="800px" />
+                    <img src="images/part7_butt.png"  />
                     <p align="middle">Figure 39: back of dog</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part7_original_no_edges.png" width="800px" />
+                    <img src="images/part7_original_no_edges.png"  />
                     <p align="middle">Figure 40: The dog mesh without showing the edges and faces</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part7_upsample.png" width="800px" />
+                    <img src="images/part7_upsample.png"  />
                     <p align="middle">Figure 41: 1 round of subdivision</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part7_upsample_no_edges.png" width="800px" />
+                    <img src="images/part7_upsample_no_edges.png"  />
                     <p align="middle">Figure 42: 1 round of subdivision without edges or faces</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part7_upsample2.png" width="800px" />
+                    <img src="images/part7_upsample2.png"  />
                     <p align="middle">Figure 43: 2 rounds of subdivision</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part7_upsample2_no_edges.png" width="800px" />
+                    <img src="images/part7_upsample2_no_edges.png"  />
                     <p align="middle">Figure 44: 2 rounds of subdivision without edges or faces</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part7_upsample2_smooth.png" width="800px" />
+                    <img src="images/part7_upsample2_smooth.png"  />
                     <p align="middle">Figure 45: 2 rounds of subdivision smooth</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part7_phong1.png" width="800px" />
+                    <img src="images/part7_phong1.png"  />
                     <p align="middle">Figure 46: blue phong shading</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part7_phong2.png" width="800px" />
+                    <img src="images/part7_phong2.png"  />
                     <p align="middle">Figure 47: white phong shading</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part7_environment.png" width="800px" />
+                    <img src="images/part7_environment.png"  />
                     <p align="middle">Figure 48: environment shading</p>
                 </div>
             </div>
