--- a/Images/index.html
+++ b/Images/index.html
@@ -1,14 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-<style>  
-    div.padded {  
-      padding-top: 0px;  
-      padding-right: 100px;  
-      padding-bottom: 0.25in;  
-      padding-left: 100px;  
-    }  
-  </style> 
     <title>Vincent Escueta  |  Colorizing</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -67,7 +59,6 @@
 <br />
 <h1 align="middle">Images of the Russian Empire -- colorizing the Prokudin-Gorskii photo collection </h1>
 
-    <div class="padded">
         <p>Sergei Mikhailovich Prokudin-Gorskii took 3 cameras. He put a blue filter on one, a green filter on another, and a red filter over the last. He put the green camera on top the red camera and the blue camera on top of the green one. He then took these cameras and photographs of scenes with all three cameras. Sergei took thousands of pictures, but never got to see them in color. By aligning his photographs using normalized cross correlation, the colored photographs that Sergei wanted have now come to life.</p>
 
     <h2 align="middle"> Results for all images </h2>
@@ -75,7 +66,7 @@
          <div class="slide">
             <div class="row">
                     <div class="col-lg-8 col-lg-offset-1 col-sm-6 text-center photos">
-                    <img src="img/emirEdgeColored.jpg" width="720px" >
+                    <img src="img/emirEdgeColored.jpg"  >
                     <p align="middle">canny edge filter emir.tif: R:[106  41] G:[49 23] TIME:26.2144749165</p>
                     </div>
                 </div>
@@ -83,7 +74,7 @@
          <div class="slide">
             <div class="row">
                     <div class="col-lg-8 col-lg-offset-1 col-sm-6 text-center photos">
-                    <img src="img/harvestersEdgeColored.jpg" width="720px" >
+                    <img src="img/harvestersEdgeColored.jpg"  >
                     <p align="middle">canny edge filter harvesters.tif: R:[124  15] G:[60 18] TIME:25.585105896</p>
                     </div>
                 </div>
@@ -91,7 +82,7 @@
          <div class="slide">
             <div class="row">
                     <div class="col-lg-8 col-lg-offset-1 col-sm-6 text-center photos">
-                    <img src="img/iconEdgeColored.jpg" width="720px" >
+                    <img src="img/iconEdgeColored.jpg"  >
                     <p align="middle">canny edge filter icon.tif: R:[91 23] G:[38 16] TIME:26.5196139812</p>
                     </div>
                 </div>
@@ -99,7 +90,7 @@
          <div class="slide">
             <div class="row">
                     <div class="col-lg-8 col-lg-offset-1 col-sm-6 text-center photos">
-                    <img src="img/ladyEdgeColored.jpg" width="720px" >
+                    <img src="img/ladyEdgeColored.jpg"  >
                     <p align="middle">canny edge filter lady.tif: R:[114  15] G:[56  9] TIME:29.0473020077</p>
                     </div>
                 </div>
@@ -107,7 +98,7 @@
         <div class="slide">
             <div class="row">
                     <div class="col-lg-8 col-lg-offset1 col-sm-6 text-center photos">
-                    <img src="img/self_portraitEdgeColored.jpg" width="720px" >
+                    <img src="img/self_portraitEdgeColored.jpg"  >
                     <p align="middle">canny edge filter self_portrait.tif: R:[175  37] G:[77 29] TIME:28.707857132</p>
                     </div>
                 </div>
@@ -115,7 +106,7 @@
          <div class="slide">
             <div class="row">
                     <div class="col-lg-8 col-lg-offset-1 col-sm-6 text-center photos">
-                    <img src="img/three_generationsEdgeColored.jpg" width="720px" >
+                    <img src="img/three_generationsEdgeColored.jpg"  >
                     <p align="middle">canny edge filter three_generations.tif: R:[113  11] G:[54 17] TIME:26.2358720303</p>
                     </div>
                 </div>
@@ -123,7 +114,7 @@
          <div class="slide">
             <div class="row">
                     <div class="col-lg-8 col-lg-offset-1 col-sm-6 text-center photos">
-                    <img src="img/trainEdgeColored.jpg" width="720px" >
+                    <img src="img/trainEdgeColored.jpg"  >
                     <p align="middle">canny edge filter train.tif: R:[85 34] G:[40  8] TIME:26.7940208912</p>
                     </div>
                 </div>
@@ -131,7 +122,7 @@
          <div class="slide">
             <div class="row">
                     <div class="col-lg-8 col-lg-offset-1 col-sm-6 text-center photos">
-                    <img src="img/turkmenEdgeColored.jpg" width="720px" >
+                    <img src="img/turkmenEdgeColored.jpg"  >
                     <p align="middle">canny edge filter turkmen.tif: R:[116  29] G:[57 22] TIME:27.184166193</p>
                     </div>
                 </div>
@@ -139,7 +130,7 @@
          <div class="slide">
             <div class="row">
                     <div class="col-lg-8 col-lg-offset-1 col-sm-6 text-center photos">
-                    <img src="img/luganoEdgeColored.jpg" width="720px" >
+                    <img src="img/luganoEdgeColored.jpg"  >
                     <p align="middle">extra lugano.tif: R:[120  32] G:[54  7] TIME:36.9884650707</p>
                     </div>
                 </div>
@@ -147,7 +138,7 @@
          <div class="slide">
             <div class="row">
                     <div class="col-lg-8 col-lg-offset-1 col-sm-6 text-center photos">
-                    <img src="img/stmarksEdgeColored.jpg" width="720px" >
+                    <img src="img/stmarksEdgeColored.jpg"  >
                     <p align="middle">extra stmarks.tif: R:[113  30] G:[47 13] TIME:34.7976961136 </p>
                     </div>
                 </div>
@@ -155,7 +146,7 @@
          <div class="slide">
             <div class="row">
                     <div class="col-lg-8 col-lg-offset-1 col-sm-6 text-center photos">
-                    <img src="img/telescopeEdgeColored.jpg" width="720px" >
+                    <img src="img/telescopeEdgeColored.jpg"  >
                     <p align="middle">extra telescope.tif: R:[144  54] G:[67 30] TIME:37.0999400616</p>
                     </div>
                 </div>
@@ -163,7 +154,7 @@
          <div class="slide">
             <div class="row">
                     <div class="col-lg-8 col-lg-offset-1 col-sm-6 text-center photos">
-                    <img src="img/mozhaiskEdgeColored.jpg" width="720px" >
+                    <img src="img/mozhaiskEdgeColored.jpg"  >
                     <p align="middle">extra mozhaisk.tif: R:[92 25] G:[41 15] TIME:35.2776269913</p>
                     </div>
                 </div>
@@ -171,7 +162,7 @@
          <div class="slide">
             <div class="row">
                     <div class="col-lg-8 col-lg-offset-1 col-sm-6 text-center photos">
-                    <img src="img/peopleEdgeColored.jpg" width="720px" >
+                    <img src="img/peopleEdgeColored.jpg"  >
                     <p align="middle">extra people.tif: R:[157  33] G:[72 21] TIME:34.1512980461</p>
                     </div>
                 </div>
@@ -179,7 +170,7 @@
          <div class="slide">
             <div class="row">
                     <div class="col-lg-8 col-lg-offset-1 col-sm-6 text-center photos">
-                    <img src="img/people2EdgeColored.jpg" width="720px" >
+                    <img src="img/people2EdgeColored.jpg"  >
                     <p align="middle">extra people2.tif: R:[133  39] G:[62 25] TIME:34.4929409027 </p>
                     </div>
                 </div>
@@ -187,7 +178,7 @@
          <div class="slide">
             <div class="row">
                     <div class="col-lg-8 col-lg-offset-1 col-sm-6 text-center photos">
-                    <img src="img/cathedralEdgeColored.jpg" width="720px" >
+                    <img src="img/cathedralEdgeColored.jpg"  >
                     <p align="middle">canny edge filter cathedral.jpg: R:[12  3] G:[5 2] TIME:0.789291143417</p>
                     </div>
                 </div>
@@ -195,7 +186,7 @@
          <div class="slide">
             <div class="row">
                     <div class="col-lg-8 col-lg-offset-1 col-sm-6 text-center photos">
-                    <img src="img/monasteryEdgeColored.jpg" width="720px" >
+                    <img src="img/monasteryEdgeColored.jpg"  >
                     <p align="middle">canny edge filter monastery.jpg: R:[2 2] G:[-3  2] TIME:0.951406002045</p>
                     </div>
                 </div>
@@ -203,7 +194,7 @@
         <div class="slide">
             <div class="row">
                     <div class="col-lg-8 col-lg-offset1 col-sm-6 text-center photos">
-                    <img src="img/nativityEdgeColored.jpg" width="720px" >
+                    <img src="img/nativityEdgeColored.jpg"  >
                     <p align="middle">canny edge filter nativity.jpg: R:[8 0] G:[3 1] TIME:0.773239135742</p>
                     </div>
                 </div>
@@ -211,14 +202,14 @@
          <div class="slide">
             <div class="row">
                     <div class="col-lg-8 col-lg-offset-1 col-sm-6 text-center photos">
-                    <img src="img/settlersEdgeColored.jpg" width="720px" >
+                    <img src="img/settlersEdgeColored.jpg"  >
                     <p align="middle">canny edge filter settlers.jpg: R:[14 -1] G:[7 0] TIME:0.621767044067</p>
                     </div>
                 </div>
          </div>
          <a class="next hvr-grow" onclick="plusSlides(1)">&#10095;</a>
         </div>
-    </div>
+
 
     <h2 align="middle">Normalized Cross Correlation (NCC)</h2>
         <p>To produce colored images, the blue, green, and red images must be well aligned. To do this, we move the red and green photographs over the blue until they almost perfectly align. To find the best alignment, we took the red and green images and displaceed them horizonally and vertically ([-15, 15] pixels each direction) and found the normalized cross correlation between the green image and the blue image then with the red image and the blue image at each displacement based on gray intensities. The displaced green and red photos that give the best correlation with the blue photos are then used to create the colored rgb image. The equation for the normalized cross correlation is</p>
@@ -229,37 +220,37 @@
         <div class="container">
             <div class="row">
                     <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
-                    <img src="img/monastery.jpg" width="250px" >
+                    <img src="img/monastery.jpg"  >
                     <p align="middle">Figure 0: Blue, green, and red filtered images</p>
                     </div>
                 </div>
             <div class="row">
                     <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/monasteryBasicColored.jpg" width="500px" >
+                    <img src="img/monasteryBasicColored.jpg"  >
                     <p align="middle">Figure 1: all pixels of monastery.jpg: R:[8 1] G:[-6  0] TIME:0.565473079681</p>
                     </div>
                     <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/monasteryNaiveColored.jpg" width="500px" >
+                    <img src="img/monasteryNaiveColored.jpg"  >
                     <p align="middle">Figure 2: middle 50% of pixels monastery.jpg: R:[2 2] G:[-3  2] TIME:0.41522693634</p>
                     </div>
                 </div>
             <div class="row">
                     <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/nativityBasicColored.jpg" width="500px" >
+                    <img src="img/nativityBasicColored.jpg"  >
                     <p align="middle">Figure 3: all pixels of nativity.jpg: R:[7 1] G:[4 1] TIME:0.594136953354</p>
                     </div>
                     <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/nativityNaiveColored.jpg" width="500px" >
+                    <img src="img/nativityNaiveColored.jpg"  >
                     <p align="middle">Figure 4: middle 50% of pixels nativity.jpg: R:[8 0] G:[3 1] TIME:0.450391054153</p>
                     </div>
                 </div>
             <div class="row">
                     <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/settlersBasicColored.jpg" width="500px" >
+                    <img src="img/settlersBasicColored.jpg"  >
                     <p align="middle">Figure 5: all pixels of settlers.jpg: R:[14 -1] G:[7 0] TIME:0.823676109314</p>
                     </div>
                     <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/settlersNaiveColored.jpg" width="500px" >
+                    <img src="img/settlersNaiveColored.jpg"  >
                     <p align="middle">Figure 6: middle 50% of pixels settlers.jpg: R:[14 -1] G:[7 0] TIME:0.405462026596</p>
                     </div>
                 </div>
@@ -271,21 +262,21 @@
         <div class="container">
             <div class="row">
                     <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/cathedralTimeColored.jpg" width="500px">
+                    <img src="img/cathedralTimeColored.jpg" >
                     <p align="middle">Figure 7: Naive cathedral.jpg: R:[12  3] G:[5 2] TIME:2.9832880497.</p>
                     </div>
                     <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/cathedralNaiveColored.jpg" width="500px">
+                    <img src="img/cathedralNaiveColored.jpg" >
                     <p align="middle">Figure 8: Image Pyramid cathedral.jpg: R:[12  3] G:[5 2] TIME:0.675570011139.</p>
                     </div>
                 </div>
             <div class="row">
                     <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/iconTimeColored.jpg" width="500px">
+                    <img src="img/iconTimeColored.jpg" >
                     <p align="middle">Figure 9: Naive icon.tif: R:[15 12] G:[15 14] TIME:316.376515865.</p>
                     </div>
                     <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/iconNaiveColored.jpg" width="500px">
+                    <img src="img/iconNaiveColored.jpg" >
                     <p align="middle">Figure 10: Image Pyramid icon.tif: R:[89 23] G:[41 17] TIME:17.6947059631</p>
                     </div>
                 </div>
@@ -296,21 +287,21 @@
         <div class="container">
             <div class="row">
                     <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/self_portraitNaiveColored.jpg" width="500px" >
+                    <img src="img/self_portraitNaiveColored.jpg"  >
                     <p align="middle">Figure 1: middle 50% of pixels self_portrait.tif: R:[175  37] G:[78 29] TIME:13.4188771248</p>
                     </div>
                     <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/three_generationsNaiveColored.jpg" width="500px" >
+                    <img src="img/three_generationsNaiveColored.jpg"  >
                     <p align="middle">Figure 12: middle 50% of pixels of three_generations.tif: R:[110  12] G:[52 14] TIME:14.5100548267</p>
                     </div>
                 </div>
             <div class="row">
                     <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/turkmenNaiveColored.jpg" width="500px" >
+                    <img src="img/turkmenNaiveColored.jpg"  >
                     <p align="middle">Figure 13: middle 50% of pixels turkmen.tif: R:[116  28] G:[55 21] TIME:13.3178520203</p>
                     </div>
                     <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/villageNaiveColored.jpg" width="500px" >
+                    <img src="img/villageNaiveColored.jpg"  >
                     <p align="middle">Figure 14: middle 50% of pixels village.tif: R:[137  22] G:[64 12] TIME:15.6597101688</p>
                     </div>
                 </div>
@@ -320,17 +311,17 @@
         <div class="container">
             <div class="row">
                     <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/emirBasicColored.jpg" width="500px" >
+                    <img src="img/emirBasicColored.jpg"  >
                     <p align="middle">Figure 15: all pixels of emir.tif: R:[107  17] G:[-3  7] TIME:14.2561810017</p>
                     </div>
                     <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/emirNaiveColored.jpg" width="500px" >
+                    <img src="img/emirNaiveColored.jpg"  >
                     <p align="middle">Figure 16: middle 50% of pixels emir.tif: R:[ 258 -213] G:[48 24] TIME:13.4975399971</p>
                     </div>
                 </div>
             <div class="row">
                     <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
-                    <img src="img/emirEdgeColored.jpg" width="720px" >
+                    <img src="img/emirEdgeColored.jpg"  >
                     <p align="middle">Figure 17: canny edge filter emir.tif: R:[106  41] G:[49 23] TIME:26.2144749165</p>
                     </div>
                 </div>
