--- a/Rasterizester/index.html
+++ b/Rasterizester/index.html
@@ -106,7 +106,7 @@
                     <p align="middle">Figure 4: Circle at 960x640 resolution</p>
                 </div>
                 <div class="col-lg-4 col-sm-6 text-center photos">
-                    <img src="./images/part2_circle_error.png" hr width="90%"/>
+                    <img src="./images/part2_circle_error.png" hr />
                     <p align="middle">Figure 5: Circle at 1440x900</p>
                 </div>
             </div>
