--- a/autostitch/index.html
+++ b/autostitch/index.html
@@ -1,14 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-<style>  
-    div.padded {  
-      padding-top: 0px;  
-      padding-right: 100px;  
-      padding-bottom: 0.25in;  
-      padding-left: 100px;  
-    }  
-  </style> 
     <title>Vincent Escueta  |  Image Warping and Mosaicing</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -72,11 +64,11 @@
     <div class="container ">
         <div class="row">
             <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/homography.PNG" height="150px" />
+                    <img src="img/homography.PNG"  />
                     <p align="middle">Homography Matrix</p>
             </div>
             <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/homography_h.png" height="150px" />
+                    <img src="img/homography_h.png"  />
                     <p align="middle">Ah = b</p>
             </div>
         </div>
@@ -93,31 +85,31 @@
         <div class="container ">
             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/guadalupe.jpg" height="500px"/>
+                    <img src="img/guadalupe.jpg" />
                     <p align="middle">Our Lady of Guadalupe</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/warped_g2.jpg" height="500px"/>
+                    <img src="img/warped_g2.jpg" />
                     <p align="middle">Warped Guadalupe</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/jtgt.jpg" height="700px"/>
+                    <img src="img/jtgt.jpg" />
                     <p align="middle">SF Japanese Tea Garden</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/warped_jtgt.jpg" height="700px"/>
+                    <img src="img/warped_jtgt.jpg" />
                     <p align="middle">Warped Tea Garden</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/ms.jpg" height="300px"/>
+                    <img src="img/ms.jpg" />
                     <p align="middle">Memorial Stadium</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/warped_ms3.jpg" height="300px"/>
+                    <img src="img/warped_ms3.jpg" />
                     <p align="middle">California</p>
                 </div>
             </div>
@@ -134,79 +126,79 @@
         <div class="container ">
             <div class="row">
                 <div class="col-lg-4 col-sm-6 text-center photos">
-                    <img src="img/27.png" height="500px"/>
+                    <img src="img/27.png" />
                     <p align="middle">Yosemite points</p>
                 </div>
                 <div class="col-lg-4 col-sm-6 text-center photos">
-                    <img src="img/tp.png" height="300px"/>
+                    <img src="img/tp.png" />
                     <p align="middle">Lake Tahoe points</p>
                 </div>
                 <div class="col-lg-4 col-sm-6 text-center photos">
-                    <img src="img/tahoepoints.jpg" height="300px"/>
+                    <img src="img/tahoepoints.jpg" />
                     <p align="middle"> More Lake Tahoe points</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/y1.jpg" height="800px"/>
+                    <img src="img/y1.jpg" />
                     <p align="middle">Yosemite Left</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/y0.jpg" height="800px"/>
+                    <img src="img/y0.jpg" />
                     <p align="middle">Yosemite Right</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-sm-6 text-center photos">
-                    <img src="img/y2_warp3.jpg" height="500px"/>
+                    <img src="img/y2_warp3.jpg" />
                     <p align="middle">Half Dome overlay</p>
                 </div>
                 <div class="col-lg-4 col-sm-6 text-center photos">
-                    <img src="img/y2_warp7.jpg" height="500px"/>
+                    <img src="img/y2_warp7.jpg" />
                     <p align="middle">Half Dome weights</p>
                 </div>
                 <div class="col-lg-4 col-sm-6 text-center photos">
-                    <img src="img/y2_warp_mb.jpg" height="500px"/>
+                    <img src="img/y2_warp_mb.jpg" />
                     <p align="middle">Half Dome multiresolution blending</p>
                 </div>
             </div>
             <div class="row">
                  <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/tl.jpg" height="300px"/>
+                    <img src="img/tl.jpg" />
                     <p align="middle">Lake Tahoe Left</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/tr.jpg" height="300px"/>
+                    <img src="img/tr.jpg" />
                     <p align="middle">Lake Tahoe Right</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/tw.jpg" height="350px"/>
+                    <img src="img/tw.jpg" />
                     <p align="middle">Lake Tahoe weights</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/tahoe.jpg" height="350px"/>
+                    <img src="img/tahoe.jpg" />
                     <p align="middle">Lake Tahoe multiresolution blending</p>
                 </div>
             </div>
             <div class="row">
                  <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/lefttahoe.jpg" height="300px"/>
+                    <img src="img/lefttahoe.jpg" />
                     <p align="middle">More Lake Tahoe Left</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/tahoeright.jpg" height="300px"/>
+                    <img src="img/tahoeright.jpg" />
                     <p align="middle">More Lake Tahoe Right</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/tahoewarp.jpg" height="350px"/>
+                    <img src="img/tahoewarp.jpg" />
                     <p align="middle">More Lake Tahoe weights</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/tahoewarp3.jpg" height="350px"/>
+                    <img src="img/tahoewarp3.jpg" />
                     <p align="middle">More Lake Tahoe multiresolution blending</p>
                 </div>
             </div>
@@ -224,7 +216,7 @@
     <div class="container ">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center photos">
-                <img src="img/samples.png" width="1400px" />
+                <img src="img/samples.png" />
                 <p align="middle">Points as results of RANSAC</p>
             </div>
         </div>
@@ -233,31 +225,31 @@
     <div class="container ">
         <div class="row">
             <div class="col-lg-6 col-sm-6 text-center photos">
-                <img src="img/tahoewarp.jpg" height="350px"/>
+                <img src="img/tahoewarp.jpg" />
                 <p align="middle">Tahoe Sunset Manual weights</p>
             </div>
             <div class="col-lg-6 col-sm-6 text-center photos">
-                <img src="img/tahoe_sunset.jpg" height="350px"/>
+                <img src="img/tahoe_sunset.jpg" />
                 <p align="middle">Tahoe Sunset RANSAC weights</p>
             </div>
         </div>
         <div class="row">
             <div class="col-lg-6 col-sm-6 text-center photos">
-                <img src="img/tw.jpg" height="350px"/>
+                <img src="img/tw.jpg" />
                 <p align="middle">Lake Tahoe Manual weights</p>
             </div>
             <div class="col-lg-6 col-sm-6 text-center photos">
-                <img src="img/tahoe11.jpg" height="350px"/>
+                <img src="img/tahoe11.jpg" />
                 <p align="middle">Lake Tahoe RANSAC weights</p>
             </div>
         </div>
         <div class="row">
             <div class="col-lg-6 col-sm-6 text-center photos">
-                <img src="img/y2_warp7.jpg" height="500px"/>
+                <img src="img/y2_warp7.jpg" />
                 <p align="middle">Half Dome Manual weights</p>
             </div>
             <div class="col-lg-6 col-sm-6 text-center photos">
-                <img src="img/ransac_yosemite15.jpg" height="500px"/>
+                <img src="img/ransac_yosemite15.jpg" />
                 <p align="middle">Half Dome RANSAC weights</p>
             </div>
         </div>
