--- a/FreqsandGrads/index.html
+++ b/FreqsandGrads/index.html
@@ -95,21 +95,21 @@
         
             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/HybridGray.jpg"  height="350px"/>
+                    <img src="img/HybridGray.jpg"  />
                     <p align="middle">Catman</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/hybrid1Inverse.jpg"  height="350px"/>
+                    <img src="img/hybrid1Inverse.jpg"  />
                     <p align="middle">Mr. Yoda Miyagi</p>
                 </div>
             </div>
             <div class="row">
                  <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/hybrid2GrayInverse.jpg"  height="350px"/>
+                    <img src="img/hybrid2GrayInverse.jpg"  />
                     <p align="middle">Naruto Escueta</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/hunkleandbelleGray.jpg"  height="350px"/>
+                    <img src="img/hunkleandbelleGray.jpg"  />
                     <p align="middle">Belle and Natasha (failure)</p>
                 </div>
             </div>
