--- a/Images/index.html
+++ b/Images/index.html
@@ -207,6 +207,7 @@
                     </div>
                 </div>
          </div>
+         <a class="prev hvr-grow" onclick="plusSlides(-1)">&#10094;</a>
          <a class="next hvr-grow" onclick="plusSlides(1)">&#10095;</a>
         </div>
 
