--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="FreqsandGrads/index.html" class="portfolio-box portfolio-link programming">
+                    <a href="FrequenciesGradients.html" class="portfolio-box portfolio-link programming">
                         <img src="img/freqs.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
