--- a/FrequenciesGradients.html
+++ b/FrequenciesGradients.html
@@ -22,7 +22,7 @@
     <!-- Plugin CSS -->
     <link rel="stylesheet" href="css/animate.min.css" type="text/css">
 </head>
-<body>
+<body id="page-top" class="fade-out">
     <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
