--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="GeoMenagerie/index.html" class="portfolio-box portfolio-link programming">
+                    <a href="GeoMenagerie.html" class="portfolio-box portfolio-link programming">
                         <img src="img/part6_phong.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
