--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="Images/index.html" class="portfolio-box portfolio-link programming">
+                    <a href="Colorizing.html" class="portfolio-box portfolio-link programming">
                         <img src="img/coloring.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
